--- a/web-build/Dockerfile.yellowlabtools
+++ b/web-build/Dockerfile.yellowlabtools
@@ -3,13 +3,15 @@
 # build-essential provides gcc/g++ needed for native npm modules
 # python3 is required by node-gyp for building native modules
 # chromium and dependencies for Puppeteer/Phantomas
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    python3 \
-    libjpeg-dev \
-    libfontconfig1 \
-    libfontconfig1-dev \
-    chromium \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        build-essential \
+        python3 \
+        libjpeg-dev \
+        libfontconfig1 \
+        libfontconfig1-dev \
+        chromium \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 # Create wrapper with --no-sandbox for Docker compatibility
